--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -1,18 +1,4 @@
 {% extends 'pages/header.html' %} {% block content %}{% load static %}
-
-<!-- header -->
-<div class="header" id="home">
-    <div class="container">
-        <ul>
-            <li> <a href="#" data-toggle="modal" data-target="#myModal"><i class="fa fa-unlock-alt" aria-hidden="true"></i> Sign In </a></li>
-            <li> <a href="#" data-toggle="modal" data-target="#myModal2"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up </a></li>
-            <li><i class="fa fa-phone" aria-hidden="true"></i> Call : 01234567898</li>
-            <li><i class="fa fa-envelope-o" aria-hidden="true"></i> <a href="mailto:info@example.com">info@example.com</a></li>
-        </ul>
-    </div>
-</div>
-<!-- //header -->
-
 <!-- Modal1 -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog">
     <div class="modal-dialog">
@@ -23,11 +9,11 @@
             </div>
             <div class="modal-body modal-body-sub_agile">
                 <div class="col-md-8 modal_body_left modal_body_left1">
-                    <h3 class="agileinfo_sign">Sign In <span>Now</span></h3>
+                    <h3 class="agileinfo_sign">Connectez-vous <span>maintenant</span></h3>
                     <form action="#" method="post">
                         <div class="styled-input agile-styled-input-top">
                             <input type="text" name="Name" required="">
-                            <label>Name</label>
+                            <label>Nom</label>
                             <span></span>
                         </div>
                         <div class="styled-input">
@@ -35,7 +21,7 @@
                             <label>Email</label>
                             <span></span>
                         </div>
-                        <input type="submit" value="Sign In">
+                        <input type="submit" value="Connexion">
                     </form>
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
                         <li>
@@ -64,7 +50,7 @@
                         </li>
                     </ul>
                     <div class="clearfix"></div>
-                    <p><a href="#" data-toggle="modal" data-target="#myModal2"> Don't have an account?</a></p>
+                    <p><a href="#" data-toggle="modal" data-target="#myModal2"> Vous avez pas de compte?</a></p>
 
                 </div>
                 <div class="col-md-4 modal_body_right modal_body_right1">
@@ -87,11 +73,11 @@
             </div>
             <div class="modal-body modal-body-sub_agile">
                 <div class="col-md-8 modal_body_left modal_body_left1">
-                    <h3 class="agileinfo_sign">Sign Up <span>Now</span></h3>
+                    <h3 class="agileinfo_sign">Inscrire <span>maintenant</span></h3>
                     <form action="#" method="post">
                         <div class="styled-input agile-styled-input-top">
                             <input type="text" name="Name" required="">
-                            <label>Name</label>
+                            <label>Nom</label>
                             <span></span>
                         </div>
                         <div class="styled-input">
@@ -101,15 +87,15 @@
                         </div>
                         <div class="styled-input">
                             <input type="password" name="password" required="">
-                            <label>Password</label>
+                            <label>Mot de passe</label>
                             <span></span>
                         </div>
                         <div class="styled-input">
                             <input type="password" name="Confirm Password" required="">
-                            <label>Confirm Password</label>
+                            <label>Confirmer mot de passe</label>
                             <span></span>
                         </div>
-                        <input type="submit" value="Sign Up">
+                        <input type="submit" value="Inscrire">
                     </form>
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
                         <li>
@@ -138,7 +124,9 @@
                         </li>
                     </ul>
                     <div class="clearfix"></div>
-                    <p><a href="#">By clicking register, I agree to your terms</a></p>
+                    <p>
+                        <a href="#">En cliquant sur s'incrire, j'accepte vos conditons</a>
+                    </p>
 
                 </div>
                 <div class="col-md-4 modal_body_right modal_body_right1">
@@ -154,7 +142,7 @@
 <!-- /banner_bottom_agile_info -->
 <div class="page-head_agile_info_w3l">
     <div class="container">
-        <h3>C<span>ontact Us </span></h3>
+        <h3>N<span>ous contactez</span></h3>
         <!--/w3_short-->
         <div class="services-breadcrumb">
             <div class="agile_inner_breadcrumb">
@@ -179,21 +167,21 @@
                 <div class="contact-grid-agile-w31">
                     <i class="fa fa-map-marker" aria-hidden="true"></i>
                     <h4>Address</h4>
-                    <p>12K Street, 45 Building Road <span>California, USA.</span></p>
+                    <p>littoral, Douala <span>Cameroun.</span></p>
                 </div>
             </div>
             <div class="col-md-4 contact-grid-agile-w3">
                 <div class="contact-grid-agile-w32">
                     <i class="fa fa-phone" aria-hidden="true"></i>
-                    <h4>Call Us</h4>
-                    <p>+1234 758 839<span>+1273 748 730</span></p>
+                    <h4>Nous contactez</h4>
+                    <p>+237 690386539<span>+237 654921030</span></p>
                 </div>
             </div>
             <div class="col-md-4 contact-grid-agile-w3">
                 <div class="contact-grid-agile-w33">
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     <h4>Email</h4>
-                    <p><a href="mailto:info@example.com">info@example1.com</a><span><a href="mailto:info@example.com">info@example2.com</a></span></p>
+                    <p><a href="dieudonne.bayiha@buildingclustercompagny.com">dieudonne.bayiha@buildingclustercompagny.com</a><span><a href="donalbayiha@gmail.com">donalbayiha@gmail.com</a></span></p>
                 </div>
             </div>
             <div class="clearfix"> </div>
@@ -211,52 +199,52 @@
         <div class="agile-contact-grids">
             <div class="agile-contact-left">
                 <div class="col-md-6 address-grid">
-                    <h4>For More <span>Information</span></h4>
+                    <h4>Plus <span>Information</span></h4>
                     <div class="mail-agileits-w3layouts">
                         <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                         <div class="contact-right">
-                            <p>Telephone </p><span>+1 (100)222-23-33</span>
+                            <p>Telephone </p><span>+237 690386539</span>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="mail-agileits-w3layouts">
                         <i class="fa fa-envelope-o" aria-hidden="true"></i>
                         <div class="contact-right">
-                            <p>Mail </p><a href="mailto:info@example.com">info@example.com</a>
+                            <p>Mail </p><a href="dieudonne.bayiha@buildingclustercompagny.com">dieudonne.bayiha@buildingclustercompagny.com</a>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <div class="mail-agileits-w3layouts">
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
                         <div class="contact-right">
-                            <p>Location</p><span>7784 Diamonds street, California, US.</span>
+                            <p>Localisation</p><span>littoral,Douala, Cameroun.</span>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social two contact">
-                        <li class="share">SHARE ON : </li>
+                        <li class="share">Nous trouver : </li>
                         <li>
                             <a href="#" class="facebook">
-                                <div class="front"><i class="fa fa-facebook" aria-hidden="true"></i></div>
-                                <div class="back"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+                                <div class="front"><i class="bi bi-facebook" aria-hidden="true"></i></div>
+                                <div class="back"><i class="bi bi-facebook" aria-hidden="true"></i></div>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="twitter">
-                                <div class="front"><i class="fa fa-twitter" aria-hidden="true"></i></div>
-                                <div class="back"><i class="fa fa-twitter" aria-hidden="true"></i></div>
+                                <div class="front"><i class="bi bi-twitter" aria-hidden="true"></i></div>
+                                <div class="back"><i class="bi bi-twitter" aria-hidden="true"></i></div>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="instagram">
-                                <div class="front"><i class="fa fa-instagram" aria-hidden="true"></i></div>
-                                <div class="back"><i class="fa fa-instagram" aria-hidden="true"></i></div>
+                                <div class="front"><i class="bi bi-instagram" aria-hidden="true"></i></div>
+                                <div class="back"><i class="bi bi-instagram" aria-hidden="true"></i></div>
                             </a>
                         </li>
                         <li>
                             <a href="#" class="pinterest">
-                                <div class="front"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
-                                <div class="back"><i class="fa fa-linkedin" aria-hidden="true"></i></div>
+                                <div class="front"><i class="bi bi-linkedin" aria-hidden="true"></i></div>
+                                <div class="back"><i class="bi bi-linkedin" aria-hidden="true"></i></div>
                             </a>
                         </li>
                     </ul>
@@ -266,7 +254,7 @@
                     <form action="#" method="post">
                         <div class="styled-input agile-styled-input-top">
                             <input type="text" name="Name" required="">
-                            <label>Name</label>
+                            <label>Nom</label>
                             <span></span>
                         </div>
                         <div class="styled-input">
@@ -303,7 +291,7 @@
                     <i class="fa fa-truck" aria-hidden="true"></i>
                 </div>
                 <div class="w3layouts_mail_grid_left2">
-                    <h3>FREE SHIPPING</h3>
+                    <h3> ACHATS GRATUIT</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
             </div>
@@ -321,7 +309,7 @@
                     <i class="fa fa-shopping-bag" aria-hidden="true"></i>
                 </div>
                 <div class="w3layouts_mail_grid_left2">
-                    <h3>MONEY BACK GUARANTEE</h3>
+                    <h3>NOUS VOUS GARANTISSONS UN SERVICE DE QUALITE</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur</p>
                 </div>
             </div>
