--- a/templates/pages/detail.html
+++ b/templates/pages/detail.html
@@ -4,7 +4,7 @@
 <!-- //Modal1 -->
 
 <div class="banner-bootom-w3-agileits">
-    <div class="container-fluid">
+    <div class="container">
         <!---728x90--->
 
         <div class="col-md-8 single-right-left ">
@@ -28,7 +28,7 @@
         </div>
         <div class="col-md-4 single-right-left simpleCart_shelfItem">
             <h3>{{titre}}</h3>
-            <p><span class="item_price">{{prix}} Frs</span> <del>- $900</del></p>
+            <p><span class="item_price">{{prix}} Frs</span> </p>
             <!-- <div class="rating1">
                 <span class="starRating">
 							<input id="rating5" type="radio" name="rating" value="5">
@@ -43,6 +43,11 @@
 							<label for="rating1">1</label>
 						</span>
             </div> -->
+            <div class="social-links">
+                <a target="_blank" href="https://wa.me/+237690386539/?text=je besoin de vos serice de Webmaster">
+                    <i class="bi-whatsapp">whatsapp</i>
+                </a>
+            </div>
             <div class="description">
                 <h5>Check delivery, payment options and charges at your location</h5>
                 <form action="#" method="post">
