--- a/templates/pages/contact.html
+++ b/templates/pages/contact.html
@@ -9,20 +9,21 @@
             </div>
             <div class="modal-body modal-body-sub_agile">
                 <div class="col-md-8 modal_body_left modal_body_left1">
+
+
+                    {% if error %}
+                    <h2> <strong>utilisateur n'existe pas</strong></h2>
+                    {% endif %} {% if user.is_authenticated %}
+                    <h2>Vous etes connecté <span class="btn-primary">{{user.username}}</span></h2>
+                    {% else %}
                     <h3 class="agileinfo_sign">Connectez-vous <span>maintenant</span></h3>
-                    <form action="#" method="post">
-                        <div class="styled-input agile-styled-input-top">
-                            <input type="text" name="Name" required="">
-                            <label>Nom</label>
-                            <span></span>
-                        </div>
-                        <div class="styled-input">
-                            <input type="email" name="Email" required="">
-                            <label>Email</label>
-                            <span></span>
-                        </div>
+                    {% endif %}
+                    <form action="{% url 'contact' %}" method="post">
+                        {% csrf_token %} {{formConnex.as_p}}
+
                         <input type="submit" value="Connexion">
                     </form>
+
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
                         <li>
                             <a href="#" class="facebook">
@@ -74,9 +75,11 @@
             <div class="modal-body modal-body-sub_agile">
                 <div class="col-md-8 modal_body_left modal_body_left1">
                     <h3 class="agileinfo_sign">Inscrire <span>maintenant</span></h3>
-                    <form action="#" method="post">
-                        <div class="styled-input agile-styled-input-top">
-                            <input type="text" name="Name" required="">
+                    {% if form.errors%} {{form.errors}}{% endif %}
+                    <form action="{% url 'contact' %}" method="post">
+                        {{form.as_p}} {% csrf_token %}
+                        <!-- <div class="styled-input agile-styled-input-top">
+                            <input type="text" name="name" required="">
                             <label>Nom</label>
                             <span></span>
                         </div>
@@ -86,15 +89,25 @@
                             <span></span>
                         </div>
                         <div class="styled-input">
+                            <input type="tel" name="tel" required="">
+                            <label>Telephone</label>
+                            <span></span>
+                        </div>
+                        <div class="styled-input">
+                            <input type="text" name="ville" required="">
+                            <label>Ville</label>
+                            <span></span>
+                        </div>
+                        <div class="styled-input">
                             <input type="password" name="password" required="">
                             <label>Mot de passe</label>
                             <span></span>
                         </div>
                         <div class="styled-input">
-                            <input type="password" name="Confirm Password" required="">
+                            <input type="password" name="ConfirPass" required="">
                             <label>Confirmer mot de passe</label>
                             <span></span>
-                        </div>
+                        </div> -->
                         <input type="submit" value="Inscrire">
                     </form>
                     <ul class="social-nav model-3d-0 footer-social w3_agile_social top_agile_third">
