--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -1,5 +1,7 @@
-{% extends "pages/header.html" %} {% block content %}
+{% extends "pages/header.html" %}
+{% block content %}
 <!--banner-->
 {% load static %}
 <!--//banner-->
-{% include 'pages/indexe.html' with list_itre='Nos produits'%} {% endblock content %}}}}
+{% include 'pages/indexe.html' with list_itre='Nos produits'%} 
+{% endblock content %}
